2023-08-04T16:09:23Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5764270598 # 1786
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-04
* notice: last 14d: unq all: 10 32
* notice: prev accum: outdated-unq outdated-all / unq all: 1433 4866 / 1453 4899
* notice: next accum: outdated-unq outdated-all / unq all: 1433 4866 / 1454 4900
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -2 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-07-21 2023-08-04]

2023-08-04T00:42:55Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5757076856 # 1784
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-04
* notice: last 14d: unq all: 10 33
* notice: prev accum: outdated-unq outdated-all / unq all: 1432 4864 / 1453 4899
* notice: next accum: outdated-unq outdated-all / unq all: 1433 4866 / 1453 4899
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-07-20] / []

2023-08-03T00:43:07Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5745250535 # 1781
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-03
* notice: last 14d: unq all: 10 35
* notice: prev accum: outdated-unq outdated-all / unq all: 1431 4862 / 1446 4888
* notice: next accum: outdated-unq outdated-all / unq all: 1432 4864 / 1453 4899
* notice: prev exec diff / last date diff / accum: unq all: +7 +11 -0 -0 / +7 +11 -0 -0 / 7 11
* notice: removed / changed dates: [2023-07-19] / [2023-08-02]

2023-08-01T16:09:18Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5729197691 # 1777