@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-04T16:09:23Z",
-  "count" : 1,
-  "count_minmax" : [ 1, 1 ],
-  "count_decinc" : [ -0, +1 ],
-  "uniques" : 1,
-  "uniques_minmax" : [ 1, 1 ],
-  "uniques_decinc" : [ -0, +1 ]
+  "timestamp" : "2023-08-05T00:41:20Z",
+  "count" : 20,
+  "count_minmax" : [ 1, 20 ],
+  "count_decinc" : [ -0, +20 ],
+  "uniques" : 15,
+  "uniques_minmax" : [ 1, 15 ],
+  "uniques_decinc" : [ -0, +15 ]
 }
