@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-04T16:09:23Z",
-  "count_outdated" : 4866,
-  "uniques_outdated" : 1433,
-  "count" : 4900,
-  "uniques" : 1454,
+  "timestamp" : "2023-08-05T00:41:20Z",
+  "count_outdated" : 4869,
+  "uniques_outdated" : 1435,
+  "count" : 4919,
+  "uniques" : 1468,
   "clones" : [
-    {
-      "timestamp": "2023-07-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 2, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2023-07-22T00:00:00Z",
       "count": 2,
@@ -115,12 +106,12 @@
     },
     {
       "timestamp": "2023-08-04T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 20,
+      "count_minmax": [ 1, 20 ],
+      "count_decinc": [ 0, 20 ],
+      "uniques": 15,
+      "uniques_minmax": [ 1, 15 ],
+      "uniques_decinc": [ 0, 15 ]
     }
   ]
 }
