@@ -1,12 +1,7 @@
 {
-  "count": 32,
-  "uniques": 10,
+  "count": 50,
+  "uniques": 23,
   "clones": [
-    {
-      "timestamp": "2023-07-21T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-07-22T00:00:00Z",
       "count": 2,
@@ -64,8 +59,8 @@
     },
     {
       "timestamp": "2023-08-04T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 20,
+      "uniques": 15
     }
   ]
 }
