@@ -1,3 +1,12 @@
+2023-08-05T00:41:20Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5767759786 # 1787
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-05
+* notice: last 14d: unq all: 23 50
+* notice: prev accum: outdated-unq outdated-all / unq all: 1433 4866 / 1454 4900
+* notice: next accum: outdated-unq outdated-all / unq all: 1435 4869 / 1468 4919
+* notice: prev exec diff / last date diff / accum: unq all: +14 +19 -0 -0 / +15 +20 -0 -0 / 15 20
+* notice: removed / changed dates: [2023-07-21] / [2023-08-04]
+
 2023-08-04T16:09:23Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5764270598 # 1786
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-04
